--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,3 +5,6 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=doadores
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+app.jwt.SecretKey= ChaveSecreta
+app.jwt.ExpirationMs= 28800000
