--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,3 +11,6 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 # desabilita o acesso remoto
 #spring.h2.console.settings.web-allow-others=false
+
+app.jwt.SecretKey= ChaveSecreta
+app.jwt.ExpirationMs= 28800000
