--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,5 +12,5 @@ spring.h2.console.path=/h2-console
 # desabilita o acesso remoto
 #spring.h2.console.settings.web-allow-others=false
 
-app.jwt.SecretKey= ChaveSecreta
+app.jwt.SecretKey= doadoresSpringBoot
 app.jwt.ExpirationMs= 28800000
