--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,5 +6,5 @@ spring.datasource.username=doadores
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-app.jwt.SecretKey= ChaveSecreta
+app.jwt.SecretKey= doadoresSpringBoot
 app.jwt.ExpirationMs= 28800000
